First Push personal website folder

--- a/bootcamp1/template.html
+++ b/bootcamp1/template.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title><Template Document></title>
+      <link href="css/day4.css" rel="stylesheet"></link>
   </head>
   <body>
     <!-- This is my Template Document-->
