First Push Personal Website

--- a/bootcamp1/personal-website/index.html
+++ b/bootcamp1/personal-website/index.html
@@ -6,7 +6,7 @@
     <title>J.Pendergrass: Home Pendergrass</title>
   </head>
   <body>
-    <!--=====Begin Header=====-->
+    <!--======Begin Header======-->
 
   </body>
 </html>
