First commit peronal website

--- a/bootcamp1/personal-website/index.html
+++ b/bootcamp1/personal-website/index.html
@@ -2,11 +2,54 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/main.css" type="text-css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/main.css" type="text-css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
     <title>J.Pendergrass: Home Pendergrass</title>
   </head>
+    <header>
+      <div class="container">
+          <div class="logo">
+            <h1>J. Pendergrass</h1>
+          </div>
+          <nav class="menu">
+            <ul>
+              <li>
+                <a href="#">Home</a>
+              </li>
+              <li>
+                <a href="#">About</a>
+              </li>
+              <li>
+                <a href="#">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="sm-icons">
+            <a href="#">
+              <i class="fa fa-facebook"></i>
+            </a>
+            <a href="#">
+              <i class="fa fa-twitter"></i>
+            </a>
+            <a href="#">Github
+              <i class="github"</i>
+            </a>
+           </div>
+
+      </div>
+    </header>
+
+    <!--===== Begin Banner =====-->
+<section id="banner">
+  <div class="banner-text">
+    <h1>Check Myself Out!</h1>
+  </div>
+</section>
+
   <body>
-    <!--======Begin Header======-->
+    <!--=====Begin Header=====-->
 
   </body>
 </html>
