--- a/bootcamp1/personal-website/index.html
+++ b/bootcamp1/personal-website/index.html
@@ -2,11 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/main.css" type="text-css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/main.css" type="text-css">
     <title>J.Pendergrass: Home Pendergrass</title>
   </head>
+
+  <!--=====Begin Header=====-->
     <header>
       <div class="container">
           <div class="logo">
@@ -33,8 +35,8 @@
             <a href="#">
               <i class="fa fa-twitter"></i>
             </a>
-            <a href="#">Github
-              <i class="github"</i>
+            <a href="#">
+              <i class="fa fa-github"></i>
             </a>
            </div>
 
@@ -48,8 +50,91 @@
   </div>
 </section>
 
-  <body>
-    <!--=====Begin Header=====-->
+<!-- =====Begine Skills Section===== -->
+<section id="skills">
+  <div class="container">
+    <div class="border"></div>
+    <div class="box1">
+      <div class="skills-icon">
+        <a href="">
+          <i class="fa fa-pencil"></i>
+        </a>
+      </div>
+      <div class="skills-info">
+        <h2>Skill 1</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+    </div>
 
-  </body>
+    <div class="box1">
+      <div class="skills-icon">
+        <a href="">
+          <i class="fa fa-pencil"></i>
+        </a>
+      </div>
+      <div class="skills-info">
+        <h2>Skill 1</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+    </div>
+    <div class="box1">
+      <div class="skills-icon">
+        <a href="">
+          <i class="fa fa-pencil"></i>
+        </a>
+      </div>
+      <div class="skills-info">
+        <h2>Skill 1</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+    </div>
+    <div class="border">
+    </div>
+  </div>
+</section>
+
+<!-- === Begin About Section == -->
+<section id="about">
+  <div>
+    <div class="about-box">
+      <div class="about-info">
+        <h1>Little About Me.</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        </p>
+      </div>
+    </div>
+  <div>
+    <div class="about-img-box">
+      <img class="selfy";
+      src="images/about_img.jpg"/>
+
+    </div>
+  </div>
+</section>
+
+  <!-- ===Footer Section ===-->
+  <footer id="footer-container">
+    <div class="footer-text-box">
+        <h1>Did By Jeff</h1>
+      <div class="footer-icons">
+        <a href="#">
+          <i class="fa fa-facebook"></i>
+        </a>
+        <a href="#">
+          <i class="fa fa-twitter"></i>
+        </a>
+        <a href="#">
+          <i class="fa fa-github"></i>
+        </a>
+      </div>
+
+    </div>
+
+
+  </footer>
+
+</body>
+
+
+
 </html>
